--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ac-hand-table",
-  "version": "0.0.18",
+  "version": "0.0.20",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -56,6 +56,7 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
