--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4",
+    "bee-button": "^2.0.11",
+    "bee-form": "^2.0.11",
     "webpack-node-externals": "^1.7.2"
   },
   "peerDependencies": {
@@ -89,7 +91,7 @@
     "prop-types": "^15.6.0"
   },
   "dependencies": {
-    "bee-button": "^2.0.11",
+
     "handsontable": "7.0.2",
     "ref-multiple-table": "^2.0.4"
   }
